i18n/pt/docusaurus-plugin-content-docs/version-20/Events/onGettingFocus.md
---
id: onGettingFocus
title: On getting focus
---

| Code | Pode ser chamado por                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       | Definição                                  |
| ---- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------ |
| 15   | [4D View Pro Area](FormObjects/viewProArea_overview.md) - [4D Write Pro area](FormObjects/writeProArea_overview.md) - [Button](FormObjects/button_overview.md) - [Check Box](FormObjects/checkbox_overview.md) - [Combo Box](FormObjects/comboBox_overview.md) - Form - [Hierarchical List](FormObjects/list_overview.md#overview) - [Input](FormObjects/input_overview.md) - [List Box](FormObjects/listbox_overview.md) - [List Box Column](FormObjects/listbox_overview.md#list-box-columns) - [Plug-in Area](FormObjects/pluginArea_overview.md#overview) - [Progress Indicators](FormObjects/progressIndicator.md) - [Radio Button](FormObjects/radio_overview.md) - [Ruler](FormObjects/ruler.md) - [Spinner](FormObjects/spinner.md) - [Stepper](FormObjects/stepper.md) - [Subform](FormObjects/subform_overview.md) - [Web area](FormObjects/webArea_overview.md) | Um objeto formulário está a receber o foco |


## Descrição

Os eventos `On Getting Focus` e [`On loss Focus`](onLosingFocus.md) são usados para detectar e gerenciar mudanças de foco para objetos [focalizáveis](FormObjects/properties_Entry.md#focusable).

Com os [objetos subformulário](FormObjects/subform_overview.md), este evento é gerado no método do objeto subformulário quando ele é marcado. É enviado para o método de formulário do subformulário, o que significa, por exemplo, que você pode gerenciar a exibição dos botões de navegação no subformulário conforme o foco. Note-se que os objetos de subformulário podem ter eles próprios o foco.
