i18n/pt/docusaurus-plugin-content-docs/version-21/Events/onGettingFocus.md
---
id: onGettingFocus
title: On getting focus
---

| Code | Pode ser chamado por                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     | Definição                                  |
| ---- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------ |
| 15   | [4D View Pro Area](FormObjects/viewProArea_overview.md) - [4D Write Pro area](FormObjects/writeProArea_overview.md) - [Button](FormObjects/button_overview.md) - [Check Box](FormObjects/checkbox_overview.md) - [Combo Box](FormObjects/comboBox_overview.md) - Form - [Hierarchical List](FormObjects/list_overview.md) - [Input](FormObjects/input_overview.md) - [List Box](FormObjects/listbox_overview.md) - [List Box Column](FormObjects/listbox_overview.md#list-box-columns) - [Plug-in Area](FormObjects/pluginArea_overview.md) - [Progress Indicators](FormObjects/progressIndicator.md) - [Radio Button](FormObjects/radio_overview.md) - [Ruler](FormObjects/ruler.md) - [Spinner](FormObjects/spinner.md) - [Stepper](FormObjects/stepper.md) - [Subform](FormObjects/subform_overview.md) - [Web area](FormObjects/webArea_overview.md) | Um objeto formulário está a receber o foco |

## Descrição

O evento `On Getting Focus`, juntamente com o evento [`On losing Focus`](onLosingFocus.md), são usados para detectar e tratar a mudança de foco para objetos [focusable](FormObjects/properties_Entry.md#focusable).

Con los [objetos subformulario](FormObjects/subform_overview.md), este evento se genera en el método del objeto subformulario cuando se verifica. É enviado para o método de formulário do subformulário, o que significa, por exemplo, que você pode gerenciar a exibição dos botões de navegação no subformulário conforme o foco. Note-se que os objetos de subformulário podem ter eles próprios o foco.
